--- a/package.json
+++ b/package.json
@@ -1,23 +1,45 @@
 {
-  "name": "bing-chat",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@next/font": "13.1.6",
-    "@types/node": "18.13.0",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
-    "eslint": "8.33.0",
-    "eslint-config-next": "13.1.6",
-    "next": "13.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.5"
-  }
+	"name": "bing-chat",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@emotion/react": "^11.10.5",
+		"@emotion/server": "^11.10.0",
+		"@mantine/core": "^6.0.0-alpha.5",
+		"@mantine/dates": "^6.0.0-alpha.5",
+		"@mantine/hooks": "^6.0.0-alpha.5",
+		"@mantine/modals": "^6.0.0-alpha.5",
+		"@mantine/next": "^6.0.0-alpha.5",
+		"@mantine/notifications": "^6.0.0-alpha.5",
+		"@next/font": "13.1.6",
+		"@tabler/icons-react": "^2.3.0",
+		"@types/node": "18.13.0",
+		"@types/react": "18.0.27",
+		"@types/react-dom": "18.0.10",
+		"classnames": "^2.3.2",
+		"eslint": "8.33.0",
+		"eslint-config-next": "13.1.6",
+		"framer-motion": "^9.0.2",
+		"jotai": "^2.0.1",
+		"next": "13.1.6",
+		"next-seo": "^5.15.0",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-markdown": "^8.0.5",
+		"rehype-raw": "^6.1.1",
+		"remark-gfm": "^3.0.1",
+		"remark-super": "^1.0.2",
+		"typescript": "4.9.5"
+	},
+	"devDependencies": {
+		"autoprefixer": "^10.4.13",
+		"postcss": "^8.4.21",
+		"tailwindcss": "^3.2.6"
+	}
 }
