--- a/package.json
+++ b/package.json
@@ -9,25 +9,24 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@emotion/react": "^11.10.5",
+		"@emotion/react": "^11.10.6",
 		"@emotion/server": "^11.10.0",
-		"@mantine/core": "^6.0.0-alpha.5",
-		"@mantine/dates": "^6.0.0-alpha.5",
-		"@mantine/hooks": "^6.0.0-alpha.5",
-		"@mantine/modals": "^6.0.0-alpha.5",
-		"@mantine/next": "^6.0.0-alpha.5",
-		"@mantine/notifications": "^6.0.0-alpha.5",
-		"@next/font": "13.1.6",
-		"@tabler/icons-react": "^2.3.0",
-		"@types/node": "18.13.0",
-		"@types/react": "18.0.27",
-		"@types/react-dom": "18.0.10",
+		"@mantine/core": "^6.0.1",
+		"@mantine/dates": "^6.0.1",
+		"@mantine/hooks": "^6.0.1",
+		"@mantine/modals": "^6.0.1",
+		"@mantine/next": "^6.0.1",
+		"@mantine/notifications": "^6.0.1",
+		"@tabler/icons-react": "^2.10.0",
+		"@types/node": "18.15.1",
+		"@types/react": "18.0.28",
+		"@types/react-dom": "18.0.11",
 		"classnames": "^2.3.2",
-		"eslint": "8.33.0",
-		"eslint-config-next": "13.1.6",
-		"framer-motion": "^9.0.2",
-		"jotai": "^2.0.1",
-		"next": "13.1.6",
+		"eslint": "8.36.0",
+		"eslint-config-next": "13.2.4",
+		"framer-motion": "^10.2.4",
+		"jotai": "^2.0.3",
+		"next": "13.2.4",
 		"next-seo": "^5.15.0",
 		"react": "18.2.0",
 		"react-copy-to-clipboard": "^5.1.0",
@@ -38,8 +37,8 @@
 		"typescript": "4.9.5"
 	},
 	"devDependencies": {
-		"autoprefixer": "^10.4.13",
+		"autoprefixer": "^10.4.14",
 		"postcss": "^8.4.21",
-		"tailwindcss": "^3.2.6"
+		"tailwindcss": "^3.2.7"
 	}
 }
